# rtst

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_sweep.sh
.github/workflows/: ci.yml
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/rtst/app/: BenchmarkActivity.kt  BenchmarkResult.kt  BenchmarkRunner.kt  CameraActivity.kt  GalleryAdapter.kt  MainActivity.kt  ModelConfig.kt  StyleTransferRunner.kt
android/app/src/main/res/drawable/: bottom_panel_bg.xml  spinner_bg.xml
android/app/src/main/res/layout/: activity_benchmark.xml  activity_camera.xml  activity_main.xml  item_gallery.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: file_paths.xml
configs/: train_config.yaml
configs/template/: export_config_template.yaml  qat_config.yaml  train_config_template.yaml
cpp_eval/: CMakeLists.txt  main.cpp
scripts/: compress_image.py  diagnose_runtime.py  estimate_training_time.py  single_forward.py  test_wandb.py
src/: export.py  export_pipeline.py  inference.py  qat.py  train.py  try.py
src/data/: dataset.py
src/models/: loss_net.py  trans_net.py  trans_net_v2.py
src/utils/: gram.py  image.py  loss.py
tests/: conftest.py  test_gram.py  test_loss.py  test_loss_net.py  test_trans_net.py
