[project]
name = "rtst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "executorch==1.1.0",
    "torchao>=0.9.0",
    "matplotlib>=3.10.8",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "wandb>=0.25.1",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest<9.0.0",
    "pre-commit>=4.5.1",
    "ruff>=0.11.0",
]
