[project]
name = "rtst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "executorch",
    "matplotlib>=3.10.8",
    "torch==2.11.0",
    "torchvision>=0.25.0",
    "wandb>=0.25.1",
    "tqdm>=4.67.3",
    "tabulate>=0.10.0",
    "torchao"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
executorch = { path = "../../open-source/executorch", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest<9.0.0",
    "pre-commit>=4.5.1",
    "ruff>=0.11.0",
]
